<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_vk_background">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:contentDescription="@string/poster_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/empty_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius_top_left="7dp"
        app:riv_corner_radius_top_right="7dp" />

    <ImageView
        android:id="@+id/gradient_img"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/gradient_vk"
        android:contentDescription="@string/film_poster_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/anime_hentay"
        app:layout_constraintBottom_toBottomOf="@id/gradient_img" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/situative_comedy"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/year_2020"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/contry_usa"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

</androidx.constraintlayout.widget.ConstraintLayout>