<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/search_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/circle_button_background"
            android:padding="5dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/watch"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/preview_image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_back_button">

            <ImageView
                android:id="@+id/preview_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/preview_image"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_poster" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/gradient_black"
                android:padding="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="Name"
                    android:textColor="@color/white"
                    android:textSize="28dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/film_genre_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="genre"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/film_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/uzbek"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <Button
                    android:id="@+id/watch"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/preview_button_background"
                    android:drawableLeft="@drawable/ic_play_stroke"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="Watch"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/film_genre_txt" />

                <ImageButton
                    android:id="@+id/favorite_btn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/preview_button_background"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintStart_toEndOf="@+id/watch"
                    app:layout_constraintTop_toBottomOf="@+id/film_genre_txt" />

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/preview_button_background"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:src="@drawable/ic_share"
                    app:layout_constraintStart_toEndOf="@+id/favorite_btn"
                    app:layout_constraintTop_toBottomOf="@+id/film_genre_txt" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/ubuntu_regular"
            />
    </LinearLayout>
</ScrollView>